[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["commonware"]
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/constantinople"
keywords = ["configuration", "traits", "generics"]
categories = []
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
  "crates/application",
  "crates/engine",
  "crates/indexer",
  "crates/mempool",
  "crates/primitives",
  "bin/deploy",
  "bin/spammer",
  "bin/validator",
]

[workspace.lints.rust]
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
large_futures = "warn"

[workspace.dependencies]
# Workspace
constantinople-engine = { path = "crates/engine" }
constantinople-indexer = { path = "crates/indexer" }
constantinople-mempool = { path = "crates/mempool" }
constantinople-primitives = { path = "crates/primitives" }
constantinople-application = { path = "crates/application" }

# Commonware
commonware-actor = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/actor" }
commonware-p2p = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/p2p" }
commonware-glue = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/glue" }
commonware-math = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/math" }
commonware-codec = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/codec" }
commonware-formatting = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/formatting" }
commonware-utils = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/utils" }
commonware-coding = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/coding" }
commonware-macros = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/macros" }
commonware-runtime = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/runtime" }
commonware-storage = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/storage" }
commonware-deployer = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/deployer" }
commonware-parallel = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/parallel" }
commonware-resolver = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/resolver" }
commonware-broadcast = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/broadcast" }
commonware-consensus = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/consensus" }
commonware-cryptography = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/cryptography", default-features = false }

# Exoware
exoware-sdk = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-server = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-qmdb = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-simplex = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-simulator = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
exoware-sql = { git = "https://github.com/exowarexyz/monorepo.git", rev = "c1febc520113dbb98078dfb59eef1f4bed4ee93e" }
datafusion = "52"

# Other
axum = "0.8"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
clap = { version = "4", default-features = false }
rand = { version = "0.8.5", default-features = false }
bytes = { version = "1.11.1", default-features = false }
criterion = "0.7.0"
rayon = "1.10"
serde = { version = "1.0.228", default-features = false }
tokio = { version = "1.50", default-features = false }
tower = { version = "0.5", default-features = false }
rstest = "0.26.0"
futures = { version = "0.3.31", default-features = false }
tracing = { version = "0.1.41", default-features = false }
arbitrary = { version = "1.4.2", features = ["derive"] }
ahash = "0.8.12"
hashbrown = { version = "0.17.0", default-features = false }
rand_core = "0.6.4"
reqwest = { version = "0.12", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde_yaml = "0.9"
derive_more = { version = "2.1.1", default-features = false }
prometheus-client = { version = "0.24.0", default-features = false }
tracing-subscriber = "0.3"

[patch."https://github.com/commonwarexyz/monorepo.git"]
commonware-actor = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/actor" }
commonware-broadcast = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/broadcast" }
commonware-codec = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/codec" }
commonware-codec-macros = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/codec/macros" }
commonware-coding = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/coding" }
commonware-conformance = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/conformance" }
commonware-conformance-macros = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/conformance/macros" }
commonware-consensus = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/consensus" }
commonware-cryptography = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/cryptography" }
commonware-deployer = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/deployer" }
commonware-formatting = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/formatting" }
commonware-glue = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/glue" }
commonware-invariants = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/invariants" }
commonware-macros = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/macros" }
commonware-macros-impl = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/macros/impl" }
commonware-math = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/math" }
commonware-p2p = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/p2p" }
commonware-parallel = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/parallel" }
commonware-resolver = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/resolver" }
commonware-runtime = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/runtime" }
commonware-runtime-macros = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/runtime/macros" }
commonware-storage = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/storage" }
commonware-stream = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/stream" }
commonware-utils = { path = "/Users/patrickogrady/code/monorepo-update-qmdb-access/utils" }

[profile.samply]
inherits = "release"
debug = true
