[package]
name = "constantinople-mempool"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
constantinople-primitives.workspace = true

commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true

axum.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[features]
mocks = [
	"commonware-consensus/mocks",
	"commonware-cryptography/mocks"
]

[dev-dependencies]
bytes.workspace = true
commonware-cryptography = { workspace = true, features = ["std"] }
commonware-math = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["std", "executor"] }
rand.workspace = true
tower = { workspace = true, features = ["util"] }
